update of socket

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <input type="text" id="message-input">
     <button type="submit" id="send-button">Send</button>
   </form>
-  <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
+  <script src="socket.io/socket.io.js"></script>
 <script>
-  var socket = io();console.log(socket);
+  var socket = io(); console.log(socket);
 </script>
 </body>
 </html>
