--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </style>
   </head>
   <body>
-    <ul id="messages"><li>ok</li></ul>
+    <span id="count"></span> user online
+    <ul id="messages"></ul>
+
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
@@ -44,6 +46,10 @@
     item.textContent = msg;
     messages.appendChild(item);
     window.scrollTo(0, document.body.scrollHeight);
+  });
+
+  socket.on('count', function(countUser) {
+      document.getElementById('count').innerHTML = countUser
   });
 </script>
 </html>
